<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".question.ExamActivity" >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:text="@string/question_desciption"
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:text="@string/answer_a"
                    android:id="@+id/AnswerA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <RadioButton
                    android:text="@string/answer_b"
                    android:id="@+id/AnswerB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <RadioButton
                    android:text="@string/answer_c"
                    android:id="@+id/AnswerC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <RadioButton
                    android:text="@string/answer_d"
                    android:id="@+id/AnswerD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </RadioGroup>

            <TextView
                android:visibility="invisible"
                android:id="@+id/explaination"
                android:text="@string/question_expaination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </ScrollView>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_previous"
            android:text="上一题"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="下一题"
            android:id="@+id/btn_next"
            />
    </LinearLayout>
</LinearLayout>
